feat: prep hobby service
